--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "6.6.3",
     "passport": "0.5.3",
     "passport-facebook": "3.0.0",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
