--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/passport": "1.0.11",
     "@types/passport-facebook": "2.1.11",
+    "@types/pg": "^8.6.5",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "2.8.5",
@@ -25,6 +26,7 @@
     "mongoose": "6.6.3",
     "passport": "0.5.3",
     "passport-facebook": "3.0.0",
+    "pg": "^8.8.0",
     "ts-node": "10.9.1",
     "winston": "^3.8.2"
   },
