--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/passport": "1.0.11",
     "@types/passport-facebook": "2.1.11",
     "@types/pg": "^8.6.5",
+    "axios": "^1.1.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "2.8.5",
@@ -24,6 +25,7 @@
     "express-session": "1.17.3",
     "mongodb": "4.10.0",
     "mongoose": "6.6.3",
+    "node-cron": "^3.0.2",
     "passport": "0.5.3",
     "passport-facebook": "3.0.0",
     "pg": "^8.8.0",
@@ -37,6 +39,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.13",
+    "@types/node-cron": "^3.0.5",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.2"
