--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-cron": "^3.0.2",
     "passport": "0.5.3",
     "passport-facebook": "3.0.0",
+    "passport-google-oauth20": "2.0.0",
     "pg": "^8.8.0",
     "ts-node": "10.9.1",
     "winston": "^3.8.2"
